k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ema-backtester
  labels:
    app: ema-backtester
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ema-backtester
  template:
    metadata:
      labels:
        app: ema-backtester
    spec:
      containers:
        - name: ema-backtester
          image: 227769753445.dkr.ecr.ap-south-1.amazonaws.com/ema-backtester:v2
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
